--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+/* purgecss start ignore */
+@tailwind base;
+@tailwind components;
+/* purgecss end ignore */
+@tailwind utilities;
 // Variables
 @import 'variables';
 
@@ -7,31 +12,24 @@
 html {
     position: relative;
     min-height: 100%;
-  }
-  body {
+    font-family: 'Roboto', sans-serif;
+}
+body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-  }
-  .footer {
+}
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    height: 40px;
+    line-height: 40px; /* Vertically center the text there */
     background-color: #f5f5f5;
-  }
-.userIcon {
-    font-size: 7px;
 }
 
-/* Voting page */
-.vote-btns {
-    margin: 15px 0;
+select optgroup{
+    color:#000;
+    font-style:normal;
+    font-weight:normal;
 }
-.vote-btns .btn {
-    margin: 0 4px;
-    min-width: 60px;
-    max-width: 60px;
-}
-
