--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,17 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 /* purgecss start ignore */
 @tailwind base;
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
 
-
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
     position: relative;
     min-height: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -29,10 +28,10 @@ body {
     background-color: #f5f5f5;
 }
 
-select optgroup{
-    color:#000;
-    font-style:normal;
-    font-weight:normal;
+select optgroup {
+    color: #000;
+    font-style: normal;
+    font-weight: normal;
 }
 
 .w-300 {
@@ -40,4 +39,8 @@ select optgroup{
 }
 .h-250 {
     height: 250px;
+}
+
+.vote-average {
+    margin-right: 20px;
 }
