Fixed average score showing Added confetti on consensus.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -380,6 +380,7 @@ pre {
 button {
   background-color: transparent;
   background-image: none;
+  padding: 0;
 }
 
 /**
@@ -7804,45 +7805,6 @@ video {
 
 .scrolling-auto{
   -webkit-overflow-scrolling: auto;
-}
-
-.overscroll-auto{
-  -ms-scroll-chaining: chained;
-      overscroll-behavior: auto;
-}
-
-.overscroll-contain{
-  -ms-scroll-chaining: none;
-      overscroll-behavior: contain;
-}
-
-.overscroll-none{
-  -ms-scroll-chaining: none;
-      overscroll-behavior: none;
-}
-
-.overscroll-y-auto{
-  overscroll-behavior-y: auto;
-}
-
-.overscroll-y-contain{
-  overscroll-behavior-y: contain;
-}
-
-.overscroll-y-none{
-  overscroll-behavior-y: none;
-}
-
-.overscroll-x-auto{
-  overscroll-behavior-x: auto;
-}
-
-.overscroll-x-contain{
-  overscroll-behavior-x: contain;
-}
-
-.overscroll-x-none{
-  overscroll-behavior-x: none;
 }
 
 .p-0{
@@ -19084,123 +19046,6 @@ video {
   transition-delay: 1000ms;
 }
 
-@-webkit-keyframes spin{
-  from{
-    transform: rotate(0deg);
-  }
-
-  to{
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin{
-  from{
-    transform: rotate(0deg);
-  }
-
-  to{
-    transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes ping{
-  0%{
-    transform: scale(1);
-    opacity: 1;
-  }
-
-  75%, 100%{
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes ping{
-  0%{
-    transform: scale(1);
-    opacity: 1;
-  }
-
-  75%, 100%{
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes pulse{
-  0%, 100%{
-    opacity: 1;
-  }
-
-  50%{
-    opacity: .5;
-  }
-}
-
-@keyframes pulse{
-  0%, 100%{
-    opacity: 1;
-  }
-
-  50%{
-    opacity: .5;
-  }
-}
-
-@-webkit-keyframes bounce{
-  0%, 100%{
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50%{
-    transform: translateY(0);
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-@keyframes bounce{
-  0%, 100%{
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50%{
-    transform: translateY(0);
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.animate-none{
-  -webkit-animation: none;
-          animation: none;
-}
-
-.animate-spin{
-  -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
-}
-
-.animate-ping{
-  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-.animate-pulse{
-  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-.animate-bounce{
-  -webkit-animation: bounce 1s infinite;
-          animation: bounce 1s infinite;
-}
-
 /* Sticky footer styles
 -------------------------------------------------- */
 
@@ -19245,34 +19090,6 @@ select optgroup {
 }
 
 @media (min-width: 640px){
-  .sm\:container{
-    width: 100%;
-  }
-
-  @media (min-width: 640px){
-    .sm\:container{
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px){
-    .sm\:container{
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px){
-    .sm\:container{
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px){
-    .sm\:container{
-      max-width: 1280px;
-    }
-  }
-
   .sm\:space-y-0 > :not(template) ~ :not(template){
     --space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
@@ -26451,45 +26268,6 @@ select optgroup {
 
   .sm\:scrolling-auto{
     -webkit-overflow-scrolling: auto;
-  }
-
-  .sm\:overscroll-auto{
-    -ms-scroll-chaining: chained;
-        overscroll-behavior: auto;
-  }
-
-  .sm\:overscroll-contain{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: contain;
-  }
-
-  .sm\:overscroll-none{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: none;
-  }
-
-  .sm\:overscroll-y-auto{
-    overscroll-behavior-y: auto;
-  }
-
-  .sm\:overscroll-y-contain{
-    overscroll-behavior-y: contain;
-  }
-
-  .sm\:overscroll-y-none{
-    overscroll-behavior-y: none;
-  }
-
-  .sm\:overscroll-x-auto{
-    overscroll-behavior-x: auto;
-  }
-
-  .sm\:overscroll-x-contain{
-    overscroll-behavior-x: contain;
-  }
-
-  .sm\:overscroll-x-none{
-    overscroll-behavior-x: none;
   }
 
   .sm\:p-0{
@@ -37730,62 +37508,9 @@ select optgroup {
   .sm\:delay-1000{
     transition-delay: 1000ms;
   }
-
-  .sm\:animate-none{
-    -webkit-animation: none;
-            animation: none;
-  }
-
-  .sm\:animate-spin{
-    -webkit-animation: spin 1s linear infinite;
-            animation: spin 1s linear infinite;
-  }
-
-  .sm\:animate-ping{
-    -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-            animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-  }
-
-  .sm\:animate-pulse{
-    -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-            animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  }
-
-  .sm\:animate-bounce{
-    -webkit-animation: bounce 1s infinite;
-            animation: bounce 1s infinite;
-  }
 }
 
 @media (min-width: 768px){
-  .md\:container{
-    width: 100%;
-  }
-
-  @media (min-width: 640px){
-    .md\:container{
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px){
-    .md\:container{
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px){
-    .md\:container{
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px){
-    .md\:container{
-      max-width: 1280px;
-    }
-  }
-
   .md\:space-y-0 > :not(template) ~ :not(template){
     --space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
@@ -44964,45 +44689,6 @@ select optgroup {
 
   .md\:scrolling-auto{
     -webkit-overflow-scrolling: auto;
-  }
-
-  .md\:overscroll-auto{
-    -ms-scroll-chaining: chained;
-        overscroll-behavior: auto;
-  }
-
-  .md\:overscroll-contain{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: contain;
-  }
-
-  .md\:overscroll-none{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: none;
-  }
-
-  .md\:overscroll-y-auto{
-    overscroll-behavior-y: auto;
-  }
-
-  .md\:overscroll-y-contain{
-    overscroll-behavior-y: contain;
-  }
-
-  .md\:overscroll-y-none{
-    overscroll-behavior-y: none;
-  }
-
-  .md\:overscroll-x-auto{
-    overscroll-behavior-x: auto;
-  }
-
-  .md\:overscroll-x-contain{
-    overscroll-behavior-x: contain;
-  }
-
-  .md\:overscroll-x-none{
-    overscroll-behavior-x: none;
   }
 
   .md\:p-0{
@@ -56243,62 +55929,9 @@ select optgroup {
   .md\:delay-1000{
     transition-delay: 1000ms;
   }
-
-  .md\:animate-none{
-    -webkit-animation: none;
-            animation: none;
-  }
-
-  .md\:animate-spin{
-    -webkit-animation: spin 1s linear infinite;
-            animation: spin 1s linear infinite;
-  }
-
-  .md\:animate-ping{
-    -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-            animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-  }
-
-  .md\:animate-pulse{
-    -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-            animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  }
-
-  .md\:animate-bounce{
-    -webkit-animation: bounce 1s infinite;
-            animation: bounce 1s infinite;
-  }
 }
 
 @media (min-width: 1024px){
-  .lg\:container{
-    width: 100%;
-  }
-
-  @media (min-width: 640px){
-    .lg\:container{
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px){
-    .lg\:container{
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px){
-    .lg\:container{
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px){
-    .lg\:container{
-      max-width: 1280px;
-    }
-  }
-
   .lg\:space-y-0 > :not(template) ~ :not(template){
     --space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
@@ -63477,45 +63110,6 @@ select optgroup {
 
   .lg\:scrolling-auto{
     -webkit-overflow-scrolling: auto;
-  }
-
-  .lg\:overscroll-auto{
-    -ms-scroll-chaining: chained;
-        overscroll-behavior: auto;
-  }
-
-  .lg\:overscroll-contain{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: contain;
-  }
-
-  .lg\:overscroll-none{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: none;
-  }
-
-  .lg\:overscroll-y-auto{
-    overscroll-behavior-y: auto;
-  }
-
-  .lg\:overscroll-y-contain{
-    overscroll-behavior-y: contain;
-  }
-
-  .lg\:overscroll-y-none{
-    overscroll-behavior-y: none;
-  }
-
-  .lg\:overscroll-x-auto{
-    overscroll-behavior-x: auto;
-  }
-
-  .lg\:overscroll-x-contain{
-    overscroll-behavior-x: contain;
-  }
-
-  .lg\:overscroll-x-none{
-    overscroll-behavior-x: none;
   }
 
   .lg\:p-0{
@@ -74756,62 +74350,9 @@ select optgroup {
   .lg\:delay-1000{
     transition-delay: 1000ms;
   }
-
-  .lg\:animate-none{
-    -webkit-animation: none;
-            animation: none;
-  }
-
-  .lg\:animate-spin{
-    -webkit-animation: spin 1s linear infinite;
-            animation: spin 1s linear infinite;
-  }
-
-  .lg\:animate-ping{
-    -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-            animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-  }
-
-  .lg\:animate-pulse{
-    -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-            animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  }
-
-  .lg\:animate-bounce{
-    -webkit-animation: bounce 1s infinite;
-            animation: bounce 1s infinite;
-  }
 }
 
 @media (min-width: 1280px){
-  .xl\:container{
-    width: 100%;
-  }
-
-  @media (min-width: 640px){
-    .xl\:container{
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px){
-    .xl\:container{
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px){
-    .xl\:container{
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px){
-    .xl\:container{
-      max-width: 1280px;
-    }
-  }
-
   .xl\:space-y-0 > :not(template) ~ :not(template){
     --space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
@@ -81990,45 +81531,6 @@ select optgroup {
 
   .xl\:scrolling-auto{
     -webkit-overflow-scrolling: auto;
-  }
-
-  .xl\:overscroll-auto{
-    -ms-scroll-chaining: chained;
-        overscroll-behavior: auto;
-  }
-
-  .xl\:overscroll-contain{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: contain;
-  }
-
-  .xl\:overscroll-none{
-    -ms-scroll-chaining: none;
-        overscroll-behavior: none;
-  }
-
-  .xl\:overscroll-y-auto{
-    overscroll-behavior-y: auto;
-  }
-
-  .xl\:overscroll-y-contain{
-    overscroll-behavior-y: contain;
-  }
-
-  .xl\:overscroll-y-none{
-    overscroll-behavior-y: none;
-  }
-
-  .xl\:overscroll-x-auto{
-    overscroll-behavior-x: auto;
-  }
-
-  .xl\:overscroll-x-contain{
-    overscroll-behavior-x: contain;
-  }
-
-  .xl\:overscroll-x-none{
-    overscroll-behavior-x: none;
   }
 
   .xl\:p-0{
@@ -93268,30 +92770,5 @@ select optgroup {
 
   .xl\:delay-1000{
     transition-delay: 1000ms;
-  }
-
-  .xl\:animate-none{
-    -webkit-animation: none;
-            animation: none;
-  }
-
-  .xl\:animate-spin{
-    -webkit-animation: spin 1s linear infinite;
-            animation: spin 1s linear infinite;
-  }
-
-  .xl\:animate-ping{
-    -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-            animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-  }
-
-  .xl\:animate-pulse{
-    -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-            animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  }
-
-  .xl\:animate-bounce{
-    -webkit-animation: bounce 1s infinite;
-            animation: bounce 1s infinite;
   }
 }
